fix widget/img overlap on mobile

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -210,14 +210,7 @@ img {
     }
 }
 
-#donatewidget {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-    width: 100%
-  }
+
 
 /* Details*/
 .details-container {
@@ -249,7 +242,14 @@ img {
     .details-item {
         flex-basis: 300px;
     }
-
+    #donatewidget {
+        margin: 0;
+        position: relative;
+        top: 50%;
+        -ms-transform: translateY(-50%);
+        transform: translateY(-50%);
+        width: 100%
+    }
 }
 
 /* Footer */
